[gd_scene load_steps=16 format=3 uid="uid://bs1xy6x6d53b6"]

[ext_resource type="Script" uid="uid://crpkwsnjxo386" path="res://object/elevatorgoal.gd" id="1_a47jx"]
[ext_resource type="Texture2D" uid="uid://ch75yjkgx8d1p" path="res://elevatorcheck.png" id="1_bq1nw"]
[ext_resource type="Texture2D" uid="uid://bytptuobtwjva" path="res://elevatoropen.png" id="2_a47jx"]
[ext_resource type="AudioStream" uid="uid://ciky1xme3br6m" path="res://sound/sound/Sfx_ElevatorDing1.wav" id="4_yj4vb"]
[ext_resource type="AudioStream" uid="uid://mkhwa8ggwf23" path="res://sound/sound/Sfx_ElevatorOpen.wav" id="5_0sh73"]
[ext_resource type="AudioStream" uid="uid://cy7cm75wlygmt" path="res://sound/sound/Sfx_ElevatorClose.wav" id="6_b76ao"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oixho"]
size = Vector2(40, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lhxd"]
atlas = ExtResource("1_bq1nw")
region = Rect2(0, 0, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtw5a"]
atlas = ExtResource("1_bq1nw")
region = Rect2(66, 0, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_n266s"]
atlas = ExtResource("2_a47jx")
region = Rect2(0, 0, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvw5m"]
atlas = ExtResource("2_a47jx")
region = Rect2(66, 0, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfyn1"]
atlas = ExtResource("2_a47jx")
region = Rect2(0, 66, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4x7q"]
atlas = ExtResource("2_a47jx")
region = Rect2(66, 66, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ipwy"]
atlas = ExtResource("2_a47jx")
region = Rect2(132, 0, 66, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_5g4rv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lhxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtw5a")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n266s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvw5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfyn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4x7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ipwy")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[node name="ElevatorGoal" type="Area2D"]
collision_mask = 2
script = ExtResource("1_a47jx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_oixho")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5g4rv")
animation = &"open"

[node name="DingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yj4vb")
volume_db = 15.0

[node name="OpeningSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0sh73")
volume_db = 15.0

[node name="ClosingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_b76ao")
volume_db = 15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
